feat: Save Student & Teacher Entity using JPA Repository